# smabrog_for_rust

./: Cargo.toml  README.md  config.json  en_smashbros_resource.json  en_smashbros_resource.yml  env_variable.sh  i18n.toml  ja_smashbros_resource.json  ja_smashbros_resource.yml  smashbros_config.json  smashbros_resource.json
locales/en-US/: smabrog.ftl
locales/ja-JP/: smabrog.ftl
src/: LICENSE  build.rs  capture.rs  data.rs  database.rs  egui.rs  engine.rs  gui.rs  lib.rs  main.rs  resource.rs  scene.rs  utils.rs
src/capture/: base.rs  codec.rs  frame_store.rs  from_desktop.rs  from_empty.rs  from_video_device.rs  from_window.rs  retro.rs
src/resource/: eframe_resource.rs  iced_resource.rs
src/scene/: dialog.rs  game_end.rs  game_playing.rs  game_start.rs  ham_vs_spam.rs  judgment.rs  loading.rs  matching.rs  ready_to_fight.rs  result.rs  unknown.rs
tesseract-plumbing-main/: Cargo.toml
tesseract-plumbing-main/src/: tess_base_api.rs
tesseract-rs-master/: Cargo.toml
tesseract-rs-master/src/: lib.rs
tesseract-sys-master/: Cargo.toml
wasapi-rs-master/: Cargo.toml
wasapi-rs-master/src/: api.rs
