[package]
name = "smabrog"
version = "0.25.1"
authors = ["Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2018"

[package.metadata.winres]
FileDescription  = "capture logger for SmashBros Special."
FileVersion      = "0.25.1"
LegalCopyright   = "Copyright © 2021 Humi@bass_clef_, and more other..."
OriginalFilename = "smabrog.exe"
ProductName      = "smabrog"
ProductVersion   = "0.25.1"

[profile.release]
opt-level = 0

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies.async-std]
version = "1.9.0"
features = ["tokio1"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
difflib = "0.4.0"
egui = { version = "0.15", features = ["persistence"] }
eframe = "0.15"
fern = "0.6"
i18n-embed = { version = "0", features = ["gettext-system", "desktop-requester", "fluent-system"] }
i18n-embed-fl = "0"
image = "0.23"
log = "0.4"
mongodb = { version = "1.2.1", features = ["async-std-runtime"], default-features = false }
once_cell = "1.7.2"
opencv = { version = "0.52", features = ["buildtime-bindgen", "clang-runtime"] }
regex = "1.4.5"
rust-embed = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
strum = "0.20"
strum_macros = "0.20"
tesseract = { path = "./tesseract-rs-master" }
tesseract-sys = { path = "./tesseract-sys-master" }
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
winapi = "0.3.9"
winit = "0.24.0"
