[package]
name = "smabrog"
version = "0.30.0"
authors = ["Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2021"

[package.metadata.winres]
FileDescription  = "capture logger for SmashBros Special."
FileVersion      = "0.30.0"
LegalCopyright   = "Copyright © 2021 Humi@bass_clef_, and more other..."
OriginalFilename = "smabrog.exe"
ProductName      = "smabrog"
ProductVersion   = "0.30.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies.async-std]
version = "1.9.0"
features = ["tokio1"]

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_Media_Audio"
]

[dependencies]
anyhow = "1.0"
bson = "2.1.0"
chrono = "0.4"
difflib = "0.4.0"
egui = { version = "0.16", features = ["persistence"] }
eframe = "0.16"
fern = "0.6"
font-kit = "0.10.1"
i18n-embed = { version = "0", features = ["gettext-system", "desktop-requester", "fluent-system"] }
i18n-embed-fl = "0"
image = "0.23"
linked-hash-map = "0.5"
log = "0.4"
mongodb = { version = "1.2.5", features = ["async-std-runtime"], default-features = false }
once_cell = "1.7.2"
opencv = { version = "0.62", features = ["clang-runtime"] }
rand = "0.8.5"
regex = "1.4.5"
rodio = { version = "0.15.0", default-features = false, features = ["symphonia-all"] }
rust-embed = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
strum = "0.20"
strum_macros = "0.20"
tesseract = { path = "./tesseract-rs-master" }
tesseract-sys = { path = "./tesseract-sys-master" }
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
wasapi = { path = "./wasapi-rs-master" }
winapi = "0.3.9"
winit = "0.24.0"
