[package]
name = "tesseract-plumbing"
version = "0.5.0"
authors = ["Chris Couzens <ccouzens@gmail.com>", "Humi@bass_clef_ <bassclef.nico@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `tesseract-sys`"
homepage = "https://github.com/ccouzens/tesseract-plumbing"
repository = "https://github.com/ccouzens/tesseract-plumbing"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"

[dependencies]
tesseract-sys = { path = "../tesseract-sys-master" }
leptonica-plumbing = "0.2.0"
thiserror = "1.0"

[dev-dependencies]
image = "0.23.14"