[package]
name          = "tesseract"
version       = "0.9.0"
authors       = ["Kevin Kwok <antimatter15@gmail.com>", "Chris Couzens <ccouzens@gmail.com>", "Humi@bass_clef_ <bassclef.nico@gmail.com>"]
documentation = "https://docs.rs/tesseract"
repository    = "https://github.com/antimatter15/tesseract-rs"
description   = "Higher-level bindings for Tesseract OCR"
license       = "MIT"
keywords      = ["tesseract", "OCR", "bindings"]
categories    = ["api-bindings", "multimedia::images"]

[dependencies]
tesseract-sys = { path = "../tesseract-sys-master" }
tesseract-plumbing = { path = "../tesseract-plumbing-main" }
thiserror = "1.0"
